src/0.63_My_PuTTY/WINDOWS/build.log
windres   --define WIN32=1 --define _WIN32=1 --define WINVER=0x0400 -DPERSOPORT -DFDJ1   ../windows/putty.rc putty.res.o
gcc   -Wall -O2 -D_WINDOWS -DWIN32S_COMPAT -DFDJ1 -DPERSOPORT -DCYGTERMPORT -DIMAGEPORT -DRECONNECTPORT -DHYPERLINKPORT -DZMODEMPORT -DSTARTBUTTON -DLAUNCHERPORT -DSAVEDUMPPORT -DKEYMAPPINGPORT -DWINCRYPTPORT -DUSE_CAPI -DPERFPORT -D_NO_OLDNAMES -DNO_MULTIMON -DNO_HTMLHELP -I.././ -I../../ -I../charset/ -I../windows/ -I../unix/ -I../mac/ -I../macosx -I../../sc -I../../url -I../../wincrypt -D_WIN32_IE=0x0500 -DWINVER=0x0500 -D_WIN32_WINDOWS=0x0410 -D_WIN32_WINNT=0x0501  -c ../version.c
gcc   -Wall -O2 -D_WINDOWS -DWIN32S_COMPAT -DFDJ1 -DPERSOPORT -DCYGTERMPORT -DIMAGEPORT -DRECONNECTPORT -DHYPERLINKPORT -DZMODEMPORT -DSTARTBUTTON -DLAUNCHERPORT -DSAVEDUMPPORT -DKEYMAPPINGPORT -DWINCRYPTPORT -DUSE_CAPI -DPERFPORT -D_NO_OLDNAMES -DNO_MULTIMON -DNO_HTMLHELP -I.././ -I../../ -I../charset/ -I../windows/ -I../unix/ -I../mac/ -I../macosx -I../../sc -I../../url -I../../wincrypt -D_WIN32_IE=0x0500 -DWINVER=0x0500 -D_WIN32_WINDOWS=0x0410 -D_WIN32_WINNT=0x0501 -c ../../kitty_image.c -DNO
In file included from .././puttyps.h:10:0,
                 from .././putty.h:26,
                 from ../../kitty_image.h:2,
                 from ../../kitty_image.c:2:
../windows/winstuff.h:284:18: error: unknown type name 'WSAEVENT'
         (SOCKET, WSAEVENT, long));
                  ^
../windows/winstuff.h:100:40: note: in definition of macro 'DECL_WINDOWS_FUNCTION'
     typedef rettype (WINAPI *t_##name) params; \
                                        ^
../windows/winstuff.h:284:18: error: unknown type name 't_WSAEventSelect'
         (SOCKET, WSAEVENT, long));
                  ^
../windows/winstuff.h:100:40: note: in definition of macro 'DECL_WINDOWS_FUNCTION'
     typedef rettype (WINAPI *t_##name) params; \
                                        ^
../windows/winstuff.h:290:18: error: unknown type name 'WSAEVENT'
         (SOCKET, WSAEVENT, LPWSANETWORKEVENTS));
                  ^
../windows/winstuff.h:100:40: note: in definition of macro 'DECL_WINDOWS_FUNCTION'
     typedef rettype (WINAPI *t_##name) params; \
                                        ^
../windows/winstuff.h:290:28: error: unknown type name 'LPWSANETWORKEVENTS'
         (SOCKET, WSAEVENT, LPWSANETWORKEVENTS));
                            ^
../windows/winstuff.h:100:40: note: in definition of macro 'DECL_WINDOWS_FUNCTION'
     typedef rettype (WINAPI *t_##name) params; \
                                        ^
../windows/winstuff.h:290:28: error: unknown type name 't_WSAEnumNetworkEvents'
         (SOCKET, WSAEVENT, LPWSANETWORKEVENTS));
                            ^
../windows/winstuff.h:100:40: note: in definition of macro 'DECL_WINDOWS_FUNCTION'
     typedef rettype (WINAPI *t_##name) params; \
                                        ^
../../kitty_image.c: In function 'load_wallpaper_bmp':
../../kitty_image.c:290:5: warning: pointer targets in passing argument 5 of 'RegQueryValueExA' differ in signedness [-Wpointer-sign]
     lRes = RegQueryValueEx(kDesktop, "Wallpaper", NULL, NULL, wpPath, &pathLen);
     ^
In file included from c:\mingw\include\windows.h:70:0,
                 from ../../kitty_image.h:1,
                 from ../../kitty_image.c:2:
c:\mingw\include\winreg.h:119:23: note: expected 'LPBYTE' but argument is of type 'char *'
 WINADVAPI LONG WINAPI RegQueryValueExA(HKEY,LPCSTR,LPDWORD,LPDWORD,LPBYTE,LPDWORD);
                       ^
../../kitty_image.c:299:5: warning: pointer targets in passing argument 5 of 'RegQueryValueExA' differ in signedness [-Wpointer-sign]
     );
     ^
In file included from c:\mingw\include\windows.h:70:0,
                 from ../../kitty_image.h:1,
                 from ../../kitty_image.c:2:
c:\mingw\include\winreg.h:119:23: note: expected 'LPBYTE' but argument is of type 'char *'
 WINADVAPI LONG WINAPI RegQueryValueExA(HKEY,LPCSTR,LPDWORD,LPDWORD,LPBYTE,LPDWORD);
                       ^
../../kitty_image.c:305:5: warning: pointer targets in passing argument 5 of 'RegQueryValueExA' differ in signedness [-Wpointer-sign]
     );
     ^
In file included from c:\mingw\include\windows.h:70:0,
                 from ../../kitty_image.h:1,
                 from ../../kitty_image.c:2:
c:\mingw\include\winreg.h:119:23: note: expected 'LPBYTE' but argument is of type 'char *'
 WINADVAPI LONG WINAPI RegQueryValueExA(HKEY,LPCSTR,LPDWORD,LPDWORD,LPBYTE,LPDWORD);
                       ^
../../kitty_image.c: In function 'loadJPEGimage':
../../kitty_image.c:391:9: warning: variable 'pix' set but not used [-Wunused-but-set-variable]
  LPBYTE pix;
         ^
../../kitty_image.c: In function 'load_bg_bmp':
../../kitty_image.c:854:10: warning: variable 'bRes' set but not used [-Wunused-but-set-variable]
     BOOL bRes;
          ^
MAKEFILE.MINGW:1167: recipe for target 'kitty_image.o' failed
mingw32-make: *** [kitty_image.o] Error 1
